# infco-rs

./: .gitignore  Cargo.toml  Cross.toml  README.rst
.github/workflows/: CI.yml
src/: error.rs  local.rs  main.rs  service.rs  ssh.rs  task.rs
src/local/: error.rs  local_service.rs  session.rs
src/ssh/: channel.rs  error.rs  session.rs  sftp_file.rs  sftp_session.rs  ssh_service.rs  wrapper.rs
src/task/: command.rs  error.rs  file_transfer.rs
