[package]
name = "infco-rs"
description = "Yet another take on infrastructure as code."
version = "0.1.2"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
rpassword = "5.0"
clap = "2"
serde_json = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.8"
